--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -1045,3 +1045,15 @@ body > nav > div{
 .blankAccordion {
   padding-bottom: 70px;
 }
+
+/* footer components */
+.footer_component { 
+  color: white; 
+  padding: 6px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 12px;
+  font-size: 17px;
+  display: inline-block;
+}
