--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Sanctuary Watch
 Theme URI: https://github.com/ioos/sanctuarywatch
-Author: the Sanctuary Watch Team
+Author: The Sanctuary Watch Team
 Description: Sanctuary Watch is an interactive theme used for the easy visualization of scientific data, within the Sanctuary Watch framework. 
 Version: 0.9.1
 */
