#160 Mobile and PC dynamic rendering of interactive figures and fixes to modal mobile display

--- a/themes/Sanctuary_Watch/assets/css/bootstrap.css
+++ b/themes/Sanctuary_Watch/assets/css/bootstrap.css
@@ -748,7 +748,7 @@ progress {
 .container-lg,
 .container-md,
 .container-sm {
-  --bs-gutter-x: 1.5rem;
+  /*--bs-gutter-x: 1.5rem;*/
   --bs-gutter-y: 0;
   width: 82%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
@@ -5545,7 +5545,7 @@ textarea.form-control-lg {
   min-height: calc(100% - var(--bs-modal-margin) * 2);
 }
 
-.modal-content {
+/* .modal-content {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -5557,6 +5557,36 @@ textarea.form-control-lg {
   border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
   border-radius: var(--bs-modal-border-radius);
   outline: 0;
+} */
+
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /*max-width: 600px; /* default modal width on desktop */
+  margin: auto;
+  color: var(--bs-modal-color);
+  pointer-events: auto;
+  background-color: var(--bs-modal-bg);
+  background-clip: padding-box;
+  border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
+  border-radius: var(--bs-modal-border-radius);
+  outline: 0;
+}
+
+/* Mobile override */
+@media (max-width: 768px) {
+  .modal-content {
+    width: 96vw;
+    height: 100%;
+    /*width: 100vw;*/
+    /*height: 100vh;*/
+    max-width: none;
+    max-height: none;
+    margin: 0;
+    border-radius: 0;
+  }
 }
 
 .modal-backdrop {
