--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -272,6 +272,7 @@ body > h1{
   .nav-tabs .nav-link.active {
     color: black;
   }
+  
 
   /* Flicker animation */
   @keyframes flickerAnimation {
@@ -377,6 +378,7 @@ body > h1{
 
 .modal {
   z-index: 100001 ;
+
 }
 
 /* Toggle Switch CSS */
@@ -445,6 +447,7 @@ input:checked + .slider:before {
 @media (min-width: 900px) {
   .modal-dialog {
     min-width: 30%;
+    /*min-width: 30%;
     /* max-width: 70%; */
     /* transform: scale(1.3);  */
     /* thought it'd be better to scale size instead of just max width; essentially a max width of 65% */
@@ -463,6 +466,7 @@ input:checked + .slider:before {
     display: block;
     margin: 0;
   } */
+
   
   #tagline-container{
     max-width: 100%;
