--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -315,7 +315,7 @@ body > h1{
 
 /* Style each column */
 .col-4 {
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   align-items: center; /* Center icons vertically */
   justify-content: center;
@@ -329,19 +329,21 @@ body > h1{
   transform: scale(0.9);
   max-width: 100%; 
   max-height: 100%; 
-  width: 100px; 
+  width: 110px; 
   height: 170px;
 }
 
 /* Ensure SVG icons are a reasonable size */
 .col-4 svg {
-  /* width: 100px;  */
-  /* height: 100px;  */
   width: 100px;
-  height: 180px;
+  height: 100px;
   max-width: 100%; 
-  max-height: 100%; 
-
+  max-height: 50%; 
+  overflow: visible;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center; /* Center captions horizontally */
+  justify-content: flex-start;
   /* transform: scale(1.55); */
   /* transform: scale(0.9); */
   transform-origin: center;
@@ -356,7 +358,15 @@ body > h1{
 .col-4 div {
   font-size: 13px; /* Adjust size as needed */
   margin-top: 10px;
-  transform: scale(0.95);
+  /*transform: scale(0.95);*/
+  word-break: break-word;
+  overflow-wrap: break-word;
+  display: flex;
+  hyphens: auto;
+  flex-direction: column-reverse;
+  align-items: center; /* Center captions horizontally */
+  justify-content: flex-end;
+  overflow: visible;
 }
 
 .modal {
