--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
 </head>
